# sme_biz_react

./: .gitignore  AGENTS.md  README.md  env.yaml  test.py
.github/workflows/: nightly-job.yml
backend/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4a0ebf3c2477_add_chat_tables.py  a6471baebfe9_initial_accounting_schema.py
backend/app/: config.py  logging_config.py  main.py
backend/app/analytics/: aggregator.py  anomaly.py  queries.py
backend/app/api/: chat.py  reports.py
backend/app/assistant/: agent.py  deps.py  instructions.md  outputs.py  tools.py
backend/app/auth/: dependencies.py
backend/app/chat/: orchestrator.py  streaming.py
backend/app/database/: session.py  supabase.py
backend/app/database/models/: __init__.py  accounting_cycle.py  audit_trail.py  business.py  chat_message.py  chat_thread.py  daily_summary.py  debtor.py  enums.py  product.py  purchase.py  sale.py  user.py
backend/app/grounding/: validator.py
backend/app/reporting/: narrative.py  pdf.py  telegram.py
backend/tests/: test_aggregator.py  test_grounding.py
docs/: architecture.md  product-brief.md  schema.sql  todos.md  todos_v2.md
frontend/: .env.example  AGENTS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: theme-provider.tsx
frontend/src/lib/: api.ts  env.ts  http.ts  supabase-data.ts  supabase.ts
frontend/src/pages/: debtors.tsx  (+8 more)
guides/: backend-setup.md  deployment.md  frontend-setup.md  supabase-setup.md
(+9 files in other folders)
