[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.8.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
